--- a/mainMenu/question5/question5.csproj
+++ b/mainMenu/question5/question5.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C767FB0A-7939-44B5-A60A-0510D35D30B2}</ProjectGuid>
+    <ProjectGuid>{E1D28009-F86F-45E2-B7CB-65BA98D2ECDB}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DynamicObjectsList</RootNamespace>
-    <AssemblyName>DynamicObjectsList</AssemblyName>
+    <RootNamespace>question5</RootNamespace>
+    <AssemblyName>question5</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,9 +44,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\question4\question4.csproj">
+      <Project>{fbc64083-c9a2-4cf7-a938-fdaad4241db6}</Project>
+      <Name>question4</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
